[package]
name = "marzanna"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
enum_dispatch = "0.3.13"
eyre = "0.6.12"
hostaddr = { version = "0.2.3", features = ["bytes", "serde"] }
rand = "0.9.2"
rand_chacha = { version = "0.9.0" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time", "sync", "net", "signal"] }
tracing = "0.1.41"

