[package]
name = "marzanna"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv = "0.11.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
enum_dispatch = "0.3.13"
eyre = "0.6.12"
hex = { version = "0.4.3", features = ["serde"] }
hkdf = "0.12.4"
#hkdf = { version = "0.12.4", features = ["std"] }
hostaddr = { version = "0.2.3", features = ["bytes", "serde"] }
rand = "0.9.2"
rand_chacha = { version = "0.9.0" }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tracing = "0.1.41"

