[package]
name = "mzna"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
colorous = "1.0.16"
eyre = "0.6.12"
fundu = { version = "2.0.1", features = ["chrono"] }
futures = "0.3.31"
hickory-client = "0.25.2"
hickory-resolver = "0.25.2"
marzanna = { path = "../marzanna" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["net", "time", "rt", "macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1.17", features = ["net", "signal", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
xdg = "3.0.0"
